# cpp-real-time-data-backtest

./: .env.example  .gitignore  CMakeLists.txt  README.md
config/: config.example.txt
include/: simple_config.h
src/: arbitrage.cpp  liquidity_analyzer.cpp  options_calculator.cpp  trades.cpp
